--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
@@ -1,136 +1,143 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    <!-- bootstap 4.0.0 -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!-- custom css -->
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-
-    <!-- bootstrap font library open iconic -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.css">
-
-    <!-- slim mini jQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-
-    <!-- scrollspy via bootstrap & javascript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-    	$("body").attr({ 
-    		"data-spy": "scroll", "data-target": ".navbar",
-		});
-	</script>
-</head>
-
-<body data-spy="scroll" data-target="#navigate">
-		<nav class="navbar fixed-top nav-trans py-1" id="navigate">
-				<a class="navbar-brand py-0" href="#">
-					<button type="button" class="btn bg-white">
-						<h5 class="font-weight-light">Stefanie<span class="oi oi-moon btn-sm align-top" title="moon" aria-hidden="true"></span>Feltman</h5>
-					</button>
+	<head>
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    <!-- google font library -->
+	    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Lekton" rel="stylesheet">
+	    <!-- bootstrap font library open iconic -->
+	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.css">
+	    <!-- custom css -->
+	    <link rel="stylesheet" type="text/css" href="styles/style.css">
+	</head>
+	<body>
+		<div class="contain">
+			<nav id="navbar">
+	            <a href="#">
+					<img id="logo-img" src="images/sflogo.png" onerror="this.onerror=null;this.src='https://live.staticflickr.com/65535/49676395282_1c51626852_o.png'">
 				</a>
-					<ul class="nav nav-pills">
-						<li class="nav-item px-1">
-							<a class="nav-link nav-click active" href="#about"><span class="oi oi-code oi-nav"></span></a>
-						</li>
-						<li class="nav-item px-1">
-							<a class="nav-link nav-click" href="#portfolio"><span class="oi oi-eye oi-nav"></span></a>
-						</li>
-						<li class="nav-item px-1">
-							<a class="nav-link nav-click" href="#contact"><span class="oi oi-chat oi-nav"></span>
-							</a>
-						</li>
-					</ul>
-		</nav>
-	
-		<div id="about" class="text-light">
+				<div id="collapse-menu">
+					<a><span class="oi oi-menu oi-nav"></span></a>
+					<div class="menu-items">
+						<ul class="nav">
+							<li class="nav-item">
+								<a href="#">
+									<button type="button" class="whtBtn">
+										<span class="oi oi-heart oi-nav"> home</span>
+									</button>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a href="#projects">
+									<button type="button" class="whtBtn">
+										<span class="oi oi-eye oi-nav"> portfolio</span>
+									</button>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a href="#contact">
+									<button type="button" class="whtBtn">
+										<span class="oi oi-chat oi-nav"> contact</span>
+									</button>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<section id="welcome-section">
 				<div class="top-top">
-					<div id="intro-1">
-						<span class="oi oi-code display-1 icon-top"></span>
-					</div>
-			</div>
-			<div class="top-center">
-					<div id="intro-2">
-						<h1 class="textH1 display-3">Need a web developer?</h1>
-					</div>
-				<div id="intro-3">
-					<h1 class="textH2 font-weight-light">Let me code that for you.</h1>
+					<span class="oi oi-code icon-top"></span>
 				</div>
-			</div>
-			<div class="top-bottom">
-				<div id="intro-3">
-					<span class="oi oi-chevron-bottom display-3 icon-bot"></span>
+				<div class="top-mid">
+					<h1>Need a web developer?</h1>
+					<h2>Let me code that for you.</h2>
 				</div>
-			</div>
-		</div>
-
-		
-	<div id="portfolio" class="container-fluid bg-white text-center text-muted">
-		<span class="oi oi-eye display-3 icon-bot"></span>
-		<h1 class="textH2 font-weight-light py-5">Have a look at my recent work.</h1>
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="thumb col-md">
-						<img class="img-fluid img-thumbnail" src="https://farm5.staticflickr.com/4785/39057923770_87cce79eff_o.jpg" alt="Project">
-					</div>
-					<div class="thumb col-md">
-						<img class="img-fluid img-thumbnail" src="https://farm5.staticflickr.com/4776/40867103941_024283f128_o.jpg" alt="Project">
-					</div>
-					<div class="thumb col-md">
-						<img class="img-fluid img-thumbnail" src="https://farm5.staticflickr.com/4776/40158788604_a9f4699bc3_o.jpg" alt="Project">
-					</div>
+				<div class="top-bot">
+					<a href="#projects">
+						<span class="oi oi-chevron-bottom icon-bot"></span>
+					</a>
 				</div>
-				<h2 class="textP font-weight-light py-5">I'm a full stack developer who loves simplifying and enhancing the user experience to create a seamless exchange between the user and the content. Currently I'm bringing my unique, logical perspective to projects right here in San Francisco.</h2>
-		</div>
-	</div>
-
-	<div id="contact" class="font-weight-light text-light">
-		<div class="container-fluid ">
-			<div class="bottom-top">
-				<div id="contact-1">
+			</section>
+			<section id="projects">
+				<span class="oi oi-eye icon-top"></span>
+				<h1>Have a look at my recent work.</h1>
+				<div class="container">
+					<div class="row">
+						<div class="project-tile col">
+							<a href="">
+								<img class="thumb" src="https://farm5.staticflickr.com/4785/39057923770_87cce79eff_o.jpg" alt="Project">
+							</a>
+						</div>
+						<div class="project-tile col">
+							<a href="">
+								<img class="thumb" src="https://farm5.staticflickr.com/4776/40867103941_024283f128_o.jpg" alt="Project">
+							</a>
+						</div>
+						<div class="project-tile col">
+							<a href="">
+								<img class="thumb" src="https://farm5.staticflickr.com/4776/40158788604_a9f4699bc3_o.jpg" alt="Project">
+							</a>
+						</div>
+					</div>
+					<h3><a id="profile-link" href="https://github.com/stefaniedev" target="_blank">View More ></a></h3>
+					<h2>I'm a full stack developer who loves simplifying and enhancing the user experience to create a seamless exchange between the user and the content. Currently I'm bringing my unique, logical perspective to projects in San Francisco, U.S.A. and Liverpool, U.K.</h2>
+				</div>
+			</section>
+			<section id="contact">
+				<div class="bottom-top">
 					<span class="oi oi-chat display-3 icon-bot"></span>
 				</div>
-		</div>
-			<div class="bottom">
-				<div id="contact-1">
+				<div class="bottom">
 					<h1 class="textH1 display-3">Ready to get in touch?</h1>
 				</div>
-		</div>
-		<div class="bottom-bottom">
-			<div id="contact-2" class="row justify-content-center py-5">
-				<div class="col-auto py-5">
-					<a href="mailto:stefaniefeltmandev@gmail.com?subject=I need a developer!" target="_blank"><button type="button" class="btn btn-trans text-light" title="Email Me"><span class="oi oi-envelope-closed display-4 icon-con"></span></button></a>
-				</div>
-				<div class="col-auto py-5">
-					<a href="https://www.freecodecamp.org/stefaniedev" target="_blank"><button type="button" class="btn btn-trans text-light" title="CodeCamp Profile"><span class="oi oi-fire display-4 icon-con"></span></button></a>
-				</div>					
-				<div class="col-auto py-5">
-					<a href="https://github.com/stefaniedev" target="_blank"><button type="button" class="btn btn-trans text-light" title="Github"><span class="oi oi-fork display-4 icon-con"></span></button></a>
-				</div>
-				<div class="col-auto py-5">
-					<a href="https://www.linkedin.com/in/stefaniefeltman/" target="_blank"><button type="button" class="btn btn-trans text-light" title="LinkedIn"><span class="oi oi-person display-4 icon-con"></span></button></a>
-				</div>
-			</div>
-			</div>
-		</div>
-		<div class="bottom-foot">
-			<footer class="container-fluid bg-light py-1">
-				<div class="row align-items-center">
-					<div class="col text-left">
-						<h6 class="font-weight-light text-muted">© 2018 Stefanie Feltman All Rights Reserved.</h6>
+				<div class="bottom-bot">
+					<div class="row">
+						<div class="col">
+							<a href="mailto:stefaniefeltmandev@gmail.com?subject=I need a developer!" target="_blank">
+								<button type="button" class="btn btn-trans text-light" title="Email Me">
+									<span class="oi oi-envelope-closed display-4 icon-con">
+									</span>
+								</button>
+							</a>
+						</div>
+						<div class="col">
+							<a href="https://www.freecodecamp.org/stefaniedev" target="_blank">
+								<button type="button" class="btn btn-trans text-light" title="CodeCamp Profile">
+									<span class="oi oi-fire display-4 icon-con">
+									</span>
+								</button>
+							</a>
+						</div>					
+						<div class="col">
+							<a href="https://github.com/stefaniedev" target="_blank">
+								<button type="button" class="btn btn-trans text-light" title="Github">
+									<span class="oi oi-fork display-4 icon-con">
+									</span>
+								</button>
+							</a>
+						</div>
+						<div class="col">
+							<a href="https://www.linkedin.com/in/stefaniefeltman/" target="_blank">
+								<button type="button" class="btn btn-trans text-light" title="LinkedIn">
+									<span class="oi oi-person display-4 icon-con">
+									</span>
+								</button>
+							</a>
+						</div>
 					</div>
-					<div class="col text-right">
-						<button type="button" class="btn bg-white">
-							<h6 class="font-weight-light text-muted">made with <span class="oi oi-heart btn-sm" aria-hidden="true"></span> by Stefanie Feltman</h6>
-						</button>
-					</div>
+				</div>
+			</section>
+		</div>
+			<footer class="row">
+				<div class="col text-left">
+					<h6 class="font-weight-light text-muted">© 2020 Stefanie Feltman All Rights Reserved.</h6>
+				</div>
+				<div class="col text-right">
+					<button type="button" class="btn bg-white">
+						<h6 class="font-weight-light text-muted">made with <span class="oi oi-heart btn-sm" aria-hidden="true"></span> by Stefanie Feltman</h6>
+					</button>
 				</div>
 			</footer>
-		</div>
-	</div>
-</body>
+	</body>
 </html>
