--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
@@ -14,10 +14,11 @@
 		<div class="contain">
 			<nav id="navbar">
 	            <a href="#">
-					<img id="logo-img" src="images/sflogo.png" onerror="this.onerror=null;this.src='https://live.staticflickr.com/65535/49676395282_1c51626852_o.png'">
+						<img id="logo-img" src="images/sflogo.png" onerror="this.onerror=null;this.src='https://live.staticflickr.com/65535/49676395282_1c51626852_o.png'" title="logo">
 				</a>
-				<div id="collapse-menu">
-					<a><span class="oi oi-menu oi-nav"></span></a>
+				<div class="collapse-menu">
+					<input type="checkbox" id="menu" />
+					<label for="menu" title="Menu"><span class="oi oi-menu oi-nav"></span><span class="oi oi-x oi-nav"></span></label>
 					<div class="menu-items">
 						<ul class="nav">
 							<li class="nav-item">
@@ -35,7 +36,7 @@
 								</a>
 							</li>
 							<li class="nav-item">
-								<a href="#contact">
+								<a href="#scContact">
 									<button type="button" class="whtBtn">
 										<span class="oi oi-chat oi-nav"> contact</span>
 									</button>
@@ -60,8 +61,8 @@
 				</div>
 			</section>
 			<section id="projects">
-				<span class="oi oi-eye icon-top"></span>
-				<h1>Have a look at my recent work.</h1>
+				<span class="oi oi-ellipses icon-top"></span>
+				<h1>My recent projects</h1>
 				<div class="container">
 					<div class="row">
 						<div class="project-tile col">
@@ -80,63 +81,39 @@
 							</a>
 						</div>
 					</div>
-					<h3><a id="profile-link" href="https://github.com/stefaniedev" target="_blank">View More ></a></h3>
+					<a id="profile-link" href="https://github.com/stefaniedev" target="_blank">
+						<button type="button" class="sqBtn"><span class="oi oi-eye"></span> View More</button>
+					</a>
 					<h2>I'm a full stack developer who loves simplifying and enhancing the user experience to create a seamless exchange between the user and the content. Currently I'm bringing my unique, logical perspective to projects in San Francisco, U.S.A. and Liverpool, U.K.</h2>
 				</div>
+				<div class="top-bot">
+					<a href="#scContact">
+						<span class="oi oi-chevron-bottom icon-bot"></span>
+					</a>
+				</div>
+				<div id="scContact"></div>
 			</section>
 			<section id="contact">
 				<div class="bottom-top">
-					<span class="oi oi-chat display-3 icon-bot"></span>
+					<span class="oi oi-chat display-3 icon-top"></span>
 				</div>
 				<div class="bottom">
-					<h1 class="textH1 display-3">Ready to get in touch?</h1>
+					<h1>Ready to get in touch?</h1>
 				</div>
 				<div class="bottom-bot">
-					<div class="row">
-						<div class="col">
-							<a href="mailto:stefaniefeltmandev@gmail.com?subject=I need a developer!" target="_blank">
-								<button type="button" class="btn btn-trans text-light" title="Email Me">
-									<span class="oi oi-envelope-closed display-4 icon-con">
-									</span>
-								</button>
-							</a>
-						</div>
-						<div class="col">
-							<a href="https://www.freecodecamp.org/stefaniedev" target="_blank">
-								<button type="button" class="btn btn-trans text-light" title="CodeCamp Profile">
-									<span class="oi oi-fire display-4 icon-con">
-									</span>
-								</button>
-							</a>
-						</div>					
-						<div class="col">
-							<a href="https://github.com/stefaniedev" target="_blank">
-								<button type="button" class="btn btn-trans text-light" title="Github">
-									<span class="oi oi-fork display-4 icon-con">
-									</span>
-								</button>
-							</a>
-						</div>
-						<div class="col">
-							<a href="https://www.linkedin.com/in/stefaniefeltman/" target="_blank">
-								<button type="button" class="btn btn-trans text-light" title="LinkedIn">
-									<span class="oi oi-person display-4 icon-con">
-									</span>
-								</button>
-							</a>
-						</div>
-					</div>
+					<a id="email-link" href="mailto:stefaniefeltmandev@gmail.com?subject=I need a developer!" target="_blank">
+						<span class="oi oi-envelope-closed"></span>
+						<span class="oi oi-envelope-open"></span>
+					</a>
 				</div>
 			</section>
 		</div>
 			<footer class="row">
-				<div class="col text-left">
-					<h6 class="font-weight-light text-muted">© 2020 Stefanie Feltman All Rights Reserved.</h6>
+				<div class="col left">
+					<h6>© 2020 Stefanie Feltman All Rights Reserved.</h6>
 				</div>
-				<div class="col text-right">
-					<button type="button" class="btn bg-white">
-						<h6 class="font-weight-light text-muted">made with <span class="oi oi-heart btn-sm" aria-hidden="true"></span> by Stefanie Feltman</h6>
-					</button>
+				<div class="col right">
+					<h6>made with <span class="oi oi-heart" aria-hidden="true"></span><br>by Stefanie Feltman</h6>
 				</div>
 			</footer>
 	</body>
