testing mobile layout

--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
@@ -22,25 +22,31 @@
 					<div class="menu-items">
 						<ul class="nav">
 							<li class="nav-item">
-								<a href="#">
-									<button type="button" class="whtBtn">
+								<label for="menu">
+								<!-- <a href="#"> -->
+									<button type="button" class="whtBtn" onclick="location.href='index.html#'">
 										<span class="oi oi-heart oi-nav"> home</span>
 									</button>
-								</a>
+								<!-- </a> -->
+							</label>
 							</li>
 							<li class="nav-item">
-								<a href="#projects">
-									<button type="button" class="whtBtn">
+								<label for="menu">
+								<!-- <a href="#projects"> -->
+									<button type="button" class="whtBtn" onclick="location.href='index.html#projects'">
 										<span class="oi oi-eye oi-nav"> portfolio</span>
 									</button>
-								</a>
+								<!-- </a> -->
+								</label>
 							</li>
 							<li class="nav-item">
-								<a href="#scContact">
-									<button type="button" class="whtBtn">
+								<label for="menu">
+								<!-- <a href="#contact"> -->
+									<button type="button" class="whtBtn" onclick="location.href='index.html#contact'">
 										<span class="oi oi-chat oi-nav"> contact</span>
 									</button>
-								</a>
+								<!-- </a> -->
+								</label>
 							</li>
 						</ul>
 					</div>
@@ -87,13 +93,13 @@
 					<h2>I'm a full stack developer who loves simplifying and enhancing the user experience to create a seamless exchange between the user and the content. Currently I'm bringing my unique, logical perspective to projects in San Francisco, U.S.A. and Liverpool, U.K.</h2>
 				</div>
 				<div class="top-bot">
-					<a href="#scContact">
+					<a href="#contact">
 						<span class="oi oi-chevron-bottom icon-bot"></span>
 					</a>
 				</div>
-				<div id="scContact"></div>
+				<div id="contact"></div>
 			</section>
-			<section id="contact">
+			<section id="contact-section">
 				<div class="bottom-top">
 					<span class="oi oi-chat display-3 icon-top"></span>
 				</div>
