--- a/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
+++ b/1-responsive-web-design-certification/8-responsive-web-design-projects/5-build-a-personal-portfolio-webpage/index.html
@@ -73,33 +73,48 @@
 					<div class="row">
 						<div class="project-tile col">
 							<a href="">
-								<img class="thumb" src="https://farm5.staticflickr.com/4785/39057923770_87cce79eff_o.jpg" alt="Project">
+								<div class="cardImg">
+									<div class="cardImgOverlay">
+                                        <h3 class="cardText">snake diet</h3>
+                                    </div>
+									<img class="thumb" src="https://farm5.staticflickr.com/4785/39057923770_87cce79eff_o.jpg" alt="Project">
+								</div>
 							</a>
 						</div>
 						<div class="project-tile col">
 							<a href="">
-								<img class="thumb" src="https://farm5.staticflickr.com/4776/40867103941_024283f128_o.jpg" alt="Project">
+								<div class="cardImg">
+									<div class="cardImgOverlay">
+                                        <h3 class="cardText">wiki</h3>
+                                    </div>
+									<img class="thumb" src="https://farm5.staticflickr.com/4776/40867103941_024283f128_o.jpg" alt="Project">
+								</div>
 							</a>
 						</div>
 						<div class="project-tile col">
 							<a href="">
-								<img class="thumb" src="https://farm5.staticflickr.com/4776/40158788604_a9f4699bc3_o.jpg" alt="Project">
+								<div class="cardImg">
+									<div class="cardImgOverlay">
+                                        <h3 class="cardText">flask docs</h3>
+                                    </div>
+									<img class="thumb" src="https://farm5.staticflickr.com/4776/40158788604_a9f4699bc3_o.jpg" alt="Project">
+								</div>
 							</a>
 						</div>
 					</div>
 					<a id="profile-link" href="https://github.com/stefaniedev" target="_blank">
 						<button type="button" class="sqBtn"><span class="oi oi-eye"></span> View More</button>
 					</a>
-					<h2>I'm a full stack developer who loves simplifying and enhancing the user experience to create a seamless exchange between the user and the content. Currently I'm bringing my unique, logical perspective to projects in San Francisco, U.S.A. and Liverpool, U.K.</h2>
+					<h2>I'm a full stack developer who loves simplifying and enhancing the user experience to create a seamless exchange between the user and the content. Currently I'm bringing my unique, logical perspective to projects in Liverpool, U.K.</h2>
 				</div>
 				<div class="top-bot">
 					<a href="#contact">
 						<span class="oi oi-chevron-bottom icon-bot"></span>
 					</a>
 				</div>
-				<div id="contact"></div>
+				<!-- <div id="contact"></div> -->
 			</section>
-			<section id="contact-section">
+			<section id="contact">
 				<div class="bottom-top">
 					<span class="oi oi-chat display-3 icon-top"></span>
 				</div>
